feat: add shanxiang decision chart
